--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MadLevel1Task1</string>
+    <string name="lower">lower</string>
+    <string name="equals">equals</string>
+    <string name="higher">higher</string>
+    <string name="title">Guess if the next throw is going to be lower, equal or higher.</string>
+
 </resources>
